Day4/declarative-manifests/lab2/mysql-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: bitnami/mysql:latest
        name: mysql
        volumeMounts:
        - name: mysql-external-storage 
          mountPath: "/bitnami/mysql/data"
      volumes:
      - name: mysql-external-storage
        persistentVolumeClaim: 
          claimName: mysql-pvc-jegan #Replace 'jegan' with your name
