Day4/declarative-manifests/lab2/mysql-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: mysql
  name: mysql
spec:
  port:
    targetPort: 8080
  to:
    kind: ""
    name: mysql
